// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`Should render with 2 expenses 1`] = `
<div>
  <h1>
    Viewing 
    20
     
    expenses
     totalling 
    $234,872.00
  </h1>
</div>
`;
